--- a/src/styles/components/_donate-confirm.scss
+++ b/src/styles/components/_donate-confirm.scss
@@ -4,7 +4,7 @@
   &__receipt {
     margin-top: 24px;
 
-    .btn {
+    .mo-btn {
       color: $azure;
       text-transform: none;
       @include font(roboto);
