--- a/src/styles/styleguide/_header.scss
+++ b/src/styles/styleguide/_header.scss
@@ -7,7 +7,7 @@
   background-color: $black;
   z-index: 1000;
 
-  .container {
+  .mo-container {
     display: flex;
     height: 100%;
     align-items: center;
