--- a/src/templates/components/cta-grid.twig
+++ b/src/templates/components/cta-grid.twig
@@ -1,5 +1,5 @@
 <section class="cta-grid">
-  <div class="container">
+  <div class="mo-container">
     <div class="cta-grid__content">
 
       <h2 class="cta-grid__heading">
