--- a/src/templates/components/donate-confirm.twig
+++ b/src/templates/components/donate-confirm.twig
@@ -28,8 +28,8 @@
           </div>
         </div>
       </div>
-      <a class="btn donate-confirm__view-receipt">View Receipt</a>
-      <a class="btn donate-confirm__hide-receipt">Hide Receipt</a>
+      <a class="mo-btn donate-confirm__view-receipt">View Receipt</a>
+      <a class="mo-btn donate-confirm__hide-receipt">Hide Receipt</a>
     </div>
 
     <div class="donate-next">
@@ -64,7 +64,7 @@
         </div>
 
         <div class="donate-form__actions">
-          <button type="submit" class="btn donate-form__action--solid" disabled>Contribute</button>
+          <button type="submit" class="mo-btn donate-form__action--solid" disabled>Contribute</button>
         </div>
         <p class="donate-form__agreement">
           By clicking contribute, I confirm that I have read all of the rules below and I certify that I comply with each of them.
