--- a/src/templates/components/donate-form.twig
+++ b/src/templates/components/donate-form.twig
@@ -48,8 +48,8 @@
             <label for="recurring">Make a recurring monthly donation</label>
           </div>
           <div class="donate-form__actions">
-            <button class="btn donate-form__action--solid" disabled>Continue</button>
-            <button class="btn donate-form__action--flat">Cancel</button>
+            <button class="mo-btn donate-form__action--solid" disabled>Continue</button>
+            <button class="mo-btn donate-form__action--flat">Cancel</button>
           </div>
         </div>
       </div>
