--- a/src/templates/components/donate-quickpay-v3.twig
+++ b/src/templates/components/donate-quickpay-v3.twig
@@ -28,7 +28,7 @@
                 <input type="text" name="other-amount" id="amount-other">
               </div>
             </div>
-            <button type="submit" class="btn donate-form__submit" disabled>Donate</button>
+            <button type="submit" class="mo-btn donate-form__submit" disabled>Donate</button>
           </form>
         </div>
     </div>
