--- a/src/templates/components/donate-quickpay.twig
+++ b/src/templates/components/donate-quickpay.twig
@@ -8,7 +8,7 @@
     <form class="donate-next__form donate-form__fields donate-shortform" method="POST">
       {% include 'components/price-select' %}
       <div class="donate-form__actions">
-        <button type="submit" class="btn donate-form__action--solid" disabled>Contribute</button>
+        <button type="submit" class="mo-btn donate-form__action--solid" disabled>Contribute</button>
       </div>
       <p class="donate-form__agreement">
         By clicking contribute, I confirm that I have read all of the rules below and I certify that I comply with each of them.
