--- a/src/templates/components/home-carousel.twig
+++ b/src/templates/components/home-carousel.twig
@@ -1,5 +1,5 @@
 <section class="home-carousel">
-  <div class="container">
+  <div class="mo-container">
     <div class="home-carousel__content">
 
       <div class="home-carousel__heading-group">
@@ -55,7 +55,7 @@
           </div>
       </div>
 
-      <a href="#" class="btn home-carousel__cta">
+      <a href="#" class="mo-btn home-carousel__cta">
         See all victories
         {% include 'components/svg' with {id: 'caret-right'} only %}
       </a>
