--- a/src/templates/components/home-illustration.twig
+++ b/src/templates/components/home-illustration.twig
@@ -1,7 +1,7 @@
 <section class="home-illustration">
 
   <div class="home-illustration__section home-illustration__top">
-    <div class="container">
+    <div class="mo-container">
         <h2 class="home-illustration__heading"><span>Who We Are</span></h2>
         <div class="home-illustration__content">
           <h3 class="home-illustration__content-heading">
@@ -10,11 +10,11 @@
           <p class="home-illustration__body">
             Whether it’s supporting a candidate for president or working to support immigration, our members are committed to a inclusive and progressive future.
           </p>
-          <a href="#" class="btn home-illustration__cta">
+          <a href="#" class="mo-btn home-illustration__cta">
             Learn More About Us
             {% include 'components/svg' with {id: 'caret-right'} only %}
           </a>
-          <a href="#" class="btn home-illustration__cta">
+          <a href="#" class="mo-btn home-illustration__cta">
             Join the Movement
             {% include 'components/svg' with {id: 'caret-right'} only %}
           </a>
@@ -23,7 +23,7 @@
   </div>
 
   <div class="home-illustration__section home-illustration__bottom">
-    <div class="container">
+    <div class="mo-container">
       <div class="home-illustration__content">
         <h3 class="home-illustration__content-heading">
           Focusing On Big Issues
