--- a/src/templates/components/join.twig
+++ b/src/templates/components/join.twig
@@ -4,7 +4,7 @@
 
   <div class="join__content">
 
-    <div class="container">
+    <div class="mo-container">
       <h2 class="join__heading">Join the Movement</h2>
 
       <form action="" class="join__form">
