--- a/src/templates/components/petition-card.twig
+++ b/src/templates/components/petition-card.twig
@@ -11,7 +11,7 @@
       <div class="petition-card__media">
         <div class="media">
           <img src="/images/petition-card-media.jpg" alt="">
-          <button class="btn media__play"></button>
+          <button class="mo-btn media__play"></button>
           <div class="media__meta">
             Posted by MoveOn <br>
             19,852 Views
@@ -31,7 +31,7 @@
         <p>Communities need to be able to mobilize resources to fight this epidemic long-term.</p>
       </div>
 
-      <button href="#" class="btn petition-card__more-cta">
+      <button href="#" class="mo-btn petition-card__more-cta">
         See More
         {% include 'components/svg' with {id: 'caret-down'} only %}
       </button>
@@ -47,7 +47,7 @@
       </div>
     </div>
 
-    <button class="btn petition-card__cta" data-modal="signers-modal">
+    <button class="mo-btn petition-card__cta" data-modal="signers-modal">
       MOST RECENT SIGNERS
       {% include 'components/svg' with {id: 'caret-right'} only %}
     </button>
