--- a/src/templates/components/petition-details.twig
+++ b/src/templates/components/petition-details.twig
@@ -15,7 +15,7 @@
       <div class="petition-details__comments__entries">
         {% include 'components/signers' %}
       </div>
-      <button class="btn petition-details__comments__toggle">
+      <button class="mo-btn petition-details__comments__toggle">
         More Reasons for Signing
         {% include 'components/svg' with {id: 'caret-down'} only %}
       </button>
@@ -24,7 +24,7 @@
     <div class="petition-details__author">
       <h4 class="petition-details__author__heading">Author</h4>
       <div class="petition-details__author__name">Matt Hildreth</div>
-      <a href="#" class="btn petition-details__author__cta">
+      <a href="#" class="mo-btn petition-details__author__cta">
         CONTACT
         {% include 'components/svg' with {id: 'caret-right'} only %}
       </a>
