--- a/src/templates/components/sign-form.twig
+++ b/src/templates/components/sign-form.twig
@@ -50,7 +50,7 @@
     <label for="comment">Comment (Optional)</label>
   </div>
 
-  <button class="btn" type="submit">SUBMIT</button>
+  <button class="mo-btn" type="submit">SUBMIT</button>
 
   <div class="sign-form__agreement">
     Note: By signing, you agree to receive email messages from MoveOn.org Civic Action and MoveOn.org Political Action. You may unsubscribe at any time.
