--- a/src/templates/components/testimonial.twig
+++ b/src/templates/components/testimonial.twig
@@ -1,5 +1,5 @@
 <div class="testimonial">
-  <div class="container">
+  <div class="mo-container">
     <div class="testimonial__content">
 
       <figure class="testimonial__image round-image">
