--- a/src/templates/pages/petition.twig
+++ b/src/templates/pages/petition.twig
@@ -3,7 +3,7 @@
 {% block bodyclass %}petition{% endblock %}
 
 {% block content %}
-  <div class="container">
+  <div class="mo-container">
     <div class="petition-info-column">
       {% include 'components/petition-card' %}
       {% include 'components/petition-details' %}
