--- a/src/templates/styleguide/header.twig
+++ b/src/templates/styleguide/header.twig
@@ -1,5 +1,5 @@
 <div class="styleguide-header">
-  <div class="container">
+  <div class="mo-container">
     <a href="/" class="logo">
       <img src="/images/logo.svg" alt="Move On Logo">
     </a>
