--- a/src/styles/components/_links.scss
+++ b/src/styles/components/_links.scss
@@ -5,13 +5,12 @@ a:active {
   transition: all .3s;
   color: $azure;
 
-  svg {
-    color: inherit;
-    fill: currentColor;
-  }
-
   &:hover {
     color: $azure;
+
+    svg {
+      fill: $azure;
+    }
   }
 
   svg {
