--- a/src/styles/components/_price-select.scss
+++ b/src/styles/components/_price-select.scss
@@ -58,6 +58,7 @@
       margin-top: 0 null 60px,
       padding-left: 16px,
       padding-right: 19px,
+      box-shadow: none,
       border: (1px solid transparentize($black, 1 - .54)) null,
       color: transparentize($black, 1 - .54),
     ));
@@ -69,7 +70,13 @@
       border: 0;
       font-size: inherit;
       color: inherit;
+      box-shadow: none;
       background-color: transparent;
+
+      &:hover {
+        box-shadow: none;
+        background-color: transparent !important;
+      }
     }
 
     label {
