--- a/src/templates/components/footer.twig
+++ b/src/templates/components/footer.twig
@@ -1,5 +1,5 @@
 <div id="footer" class="footer">
-  <div class="container">
+  <div class="mo-container">
     <div class="footer__logo">
       <img src="/images/logo.svg" alt="">
     </div>
