--- a/src/templates/components/home-hero.twig
+++ b/src/templates/components/home-hero.twig
@@ -1,5 +1,5 @@
 <div class="home-hero">
-  <div class="container">
+  <div class="mo-container">
 
     <div class="home-hero__image">
       <div class="home-hero__image-carousel">
@@ -24,7 +24,7 @@
           <p class="home-hero__body">
             <strong>OUR MESSAGE IS CLEAR:</strong> Now is the time for members of Congress to show that they are listening and acting on their constituent’s demand for the clean Dream Act—or begin facing the consequence.
           </p>
-          <a href="#" class="home-hero__cta btn">
+          <a href="#" class="home-hero__cta mo-btn">
             VIEW PETITION
             {% include 'components/svg' with {id: 'caret-right'} %}
           </a>
@@ -36,7 +36,7 @@
           <p class="home-hero__body">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora quibusdam a dolore officia quo magni, quia id consequuntur repudiandae, ratione eum officiis autem. Vero vel sunt provident eligendi porro consequuntur!
           </p>
-          <a href="#" class="home-hero__cta btn">
+          <a href="#" class="home-hero__cta mo-btn">
             VIEW PETITION
             {% include 'components/svg' with {id: 'caret-right'} %}
           </a>
@@ -48,7 +48,7 @@
           <p class="home-hero__body">
             Officiis quis debitis, nemo architecto iure, incidunt aut suscipit, quidem harum ea vero quibusdam fugiat modi. Assumenda, libero, doloribus!
           </p>
-          <a href="#" class="home-hero__cta btn">
+          <a href="#" class="home-hero__cta mo-btn">
             VIEW PETITION
             {% include 'components/svg' with {id: 'caret-right'} %}
           </a>
