--- a/src/templates/components/share-modal.twig
+++ b/src/templates/components/share-modal.twig
@@ -37,10 +37,10 @@
 
 
     <div class="share-modal__links">
-      <a href="#" class="btn share-modal__link">
+      <a href="#" class="mo-btn share-modal__link">
         {% include 'components/svg' with {id: 'twitter'} only %} Twitter
       </a>
-      <a href="#" class="btn share-modal__link">
+      <a href="#" class="mo-btn share-modal__link">
         {% include 'components/svg' with {id: 'link'} only %} Copy Link
       </a>
     </div>
