--- a/src/styles/components/_home-hero.scss
+++ b/src/styles/components/_home-hero.scss
@@ -44,18 +44,16 @@
           display: block null none,
         ));
 
-        &.previous {
-          &, &:hover {
-            right: auto;
-            left: 10px;
-          }
+        &.previous,
+        &.previous:hover {
+          right: auto;
+          left: 10px;
         }
 
-        &.next {
-          &, &:hover {
-            left: auto;
-            right: 10px;
-          }
+        &.next,
+        &.next:hover  {
+          left: auto;
+          right: 10px;
         }
 
         &:not([disabled]):hover {
@@ -143,12 +141,20 @@
         width: 20px;
         height: 20px;
 
-        &.previous {
-          left: percentage(-770/380);
+        &:hover {
+          top: 50%;
         }
 
-        &.next {
+        &.previous,
+        &.previous:hover {
+          left: percentage(-770/380);
+          right: auto;
+        }
+
+        &.next,
+        &.next:hover {
           right: percentage(-170/380);
+          left: auto;
         }
 
         &:not([disabled]):hover {
