Ensure consitency against moui stylesheets

--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -315,6 +315,7 @@ form {
 
 
 // REMOVE BOX SHADOW ON INVALID FIELDS
+input:focus,
 input:invalid:focus,
 input:focus:invalid:focus {
   box-shadow: none !important;
