--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="giraffe">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/styles/vendors.css" />
         <link rel="stylesheet" href="/styles/main.css" />
     </head>
-    <body class="{% block bodyclass %}{% endblock %}">
+    <body class="giraffe {% block bodyclass %}{% endblock %}">
         <div style="display:none">{% include 'components/symbol/svg/sprite.symbol.svg' %}</div>
         <div class="wrapper">
           {% include 'components/header' %}
