--- a/src/templates/pages/styleguide.twig
+++ b/src/templates/pages/styleguide.twig
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/styles/main.css" />
         <link rel="stylesheet" href="/styles/styleguide.css" />
     </head>
-    <body class="{% block bodyclass %}styleguide {% endblock %}">
+    <body class="giraffe {% block bodyclass %}styleguide {% endblock %}">
         <div style="display:none">{% include 'components/symbol/svg/sprite.symbol.svg' %}</div>
         <div class="wrapper">
 
