--- a/src/templates/components/svg.twig
+++ b/src/templates/components/svg.twig
@@ -1,3 +1,1 @@
-<svg class="{{ class }}">
-  <use xlink:href="#{{ id }}"/>
-</svg>
+<svg{% if class %} class="{{ class }}"{% endif %}><use xlink:href="#{{ id }}"/></svg>
