--- a/src/templates/pages/styleguide.twig
+++ b/src/templates/pages/styleguide.twig
@@ -1,3 +1,5 @@
+{% set markup = { blocks: ['markup']} %}
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -78,7 +80,7 @@
             {% endembed %}
 
             {# BUTTONS #}
-            {% embed 'styleguide/block' %}
+            {% embed 'styleguide/block' with markup%}
                 {% block heading %}Buttons{% endblock %}
                 {% block content %}
                     <div class="styleguide-buttons">
@@ -94,10 +96,11 @@
                         <p><div style="background-color: #ddd"><button class="mo-btn styleguide__button--transparent-light">Transparent-Light</button> <code class="SASS">@include mo-btn--transparent-light</code></div></p><br>
                     </div>
                 {% endblock %}
+                {% block markup %}<button class="mo-btn styleguide__button--azure">Azure</button>{% endblock %}
             {% endembed %}
 
             {# ICONS #}
-            {% embed 'styleguide/block' %}
+            {% embed 'styleguide/block' with {blocks: ['markup']} %}
                 {% block heading %}Icons Set{% endblock %}
                 {% block content %}
                     <div class="styleguide-icons">
@@ -125,11 +128,12 @@
                         {% endfor %}
                     </div>
                 {% endblock %}
+                {% block markup %}<svg><use xlink:href="#{{facebook}}"/></svg>{% endblock %}
             {% endembed %}
 
 
             {# TYPOGRAPHY #}
-            {% embed 'styleguide/block' %}
+            {% embed 'styleguide/block' with markup%}
                 {% block heading %}Typography: Headings{% endblock %}
                 {% block content %}
                     <div class="styleguide-headings">
@@ -140,20 +144,22 @@
                         <h5>Heading 5</h5>
                     </div>
                 {% endblock %}
+                {% block markup %}<h1>Heading 1</h1>{% endblock %}
             {% endembed %}
 
             {# TYPOGRAPHY: BODY #}
-            {% embed 'styleguide/block' %}
+            {% embed 'styleguide/block' with markup%}
                 {% block heading %}Typography: Body{% endblock %}
                 {% block content %}
                     <div class="styleguide-headings">
                         <p>Lorem ipsum dolor sit <em>amet</em>, <a href="#">consectetur</a> <strong>adipisicing elit</strong>. Repellendus tenetur pariatur, nam natus est rerum sint minus maiores voluptas, facilis optio fugit delectus eligendi officiis dolorum ratione, quo numquam deserunt! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil placeat repudiandae minima non tempore odio cumque sit magnam temporibus nam quasi dolores deserunt est, aliquid nesciunt, eius, beatae debitis dolore!</p>
                     </div>
                 {% endblock %}
+                {% block markup %}<p>Lorem ipsum dolor sit <em>amet</em>, <a href="#">consectetur</a> <strong>adipisicing elit</strong>. Repellendus tenetur pariatur, nam natus est rerum sint minus maiores voluptas, facilis optio fugit delectus eligendi officiis dolorum ratione, quo numquam deserunt! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil placeat repudiandae minima non tempore odio cumque sit magnam temporibus nam quasi dolores deserunt est, aliquid nesciunt, eius, beatae debitis dolore!</p>{% endblock %}
             {% endembed %}
 
             {# TYPOGRAPHY: LIST #}
-            {% embed 'styleguide/block' %}
+            {% embed 'styleguide/block' with markup%}
                 {% block heading %}Typography: List{% endblock %}
                 {% block content %}
                     <div class="styleguide-list">
@@ -165,10 +171,16 @@
                         </ul>
                     </div>
                 {% endblock %}
+                {% block markup %}<ul>
+    <li>2018 Elections</li>
+    <li>Tax Reform</li>
+    <li>Immigration</li>
+    <li>Healthcare</li>
+</ul>{% endblock %}
             {% endembed %}
 
             {# TYPOGRAPHY: BLOCKQUOTE #}
-            {% embed 'styleguide/block' %}
+            {% embed 'styleguide/block' with markup%}
                 {% block heading %}Typography: Blockquote{% endblock %}
                 {% block content %}
                     <div class="styleguide-description">
@@ -183,10 +195,16 @@
                           </blockquote>
                     </div>
                 {% endblock %}
+                {% block markup %}<blockquote>
+    <p>
+      “When a community starts to listen to each other, pull together, and work towards a common goal, the anything is possible.”
+    </p>
+    <cite>— <strong>Chuck</strong>, MoveOn Mobilizer</cite>
+</blockquote>{% endblock %}
             {% endembed %}
 
             {# CTA LINKS #}
-            {% embed 'styleguide/block' %}
+            {% embed 'styleguide/block' with markup %}
                 {% block heading %}Typography: CTA Links{% endblock %}
                 {% block content %}
                     <div class="styleguide-description">
@@ -237,10 +255,16 @@
                         </div>
                     </div>
                 {% endblock %}
+                {% block markup %}
+<a href="#" class="mo-btn home-illustration__cta">
+    Learn More About Us
+    {% include 'components/svg' with {id: 'caret-right'} only %}
+</a>
+{% endblock %}
             {% endembed %}
 
             {# TYPOGRAPHY: ANIMATED UNDERLINE #}
-            {% embed 'styleguide/block' %}
+            {% embed 'styleguide/block' with markup %}
                 {% block heading %}Typography: Animated Underline{% endblock %}
                 {% block content %}
                     <div class="styleguide-description">
@@ -254,10 +278,17 @@
                         </div>
                     </div>
                 {% endblock %}
+{% block markup %}
+<div>
+    <p class="animated-underline"><span>Sign</span><span>a</span><span>Petition</span></p>
+    <p class="animated-underline"><span>Support</span><span>a</span><span>Campaign</span></p>
+    <p class="animated-underline"><span>Attend</span><span>an</span><span>Event</span></p>
+</div>
+{% endblock %}
             {% endembed %}
 
             {# ROUND IMAGE #}
-            {% embed 'styleguide/block' %}
+            {% embed 'styleguide/block' with markup %}
                 {% block heading %}Round Image{% endblock %}
                 {% block content %}
                     <div class="styleguide-description">
@@ -269,10 +300,15 @@
                         </div>
                     </div>
                 {% endblock %}
+{% block markup %}
+<div class="round-image">
+    <img src="/images/testimonial-image.jpg" alt="">
+</div>
+{% endblock %}
             {% endembed %}
 
             {# MEDIA #}
-            {% embed 'styleguide/block' %}
+            {% embed 'styleguide/block' with markup %}
                 {% block heading %}Media{% endblock %}
                 {% block content %}
                     <div class="styleguide-media">
@@ -286,6 +322,16 @@
                         </div>
                     </div>
                 {% endblock %}
+{% block markup %}
+<div class="media">
+  <img src="/images/petition-card-media.jpg" alt="">
+  <button class="mo-btn media__play"></button>
+  <div class="media__meta">
+    Posted by MoveOn <br>
+    19,852 Views
+  </div>
+</div>
+{% endblock %}
             {% endembed %}
 
           </div>
