Styleguide: Spacing quickfix

--- a/src/styles/styleguide.scss
+++ b/src/styles/styleguide.scss
@@ -27,6 +27,7 @@ body.styleguide {
   }
 
   .styleguide-markup {
+    margin-top: 20px;
     padding: 10px 15px;
     line-height: 1.5;
     position: relative;
