--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -64,6 +64,7 @@
 @import "pages/donate-v1";
 @import "pages/donate-v3";
 @import "pages/donate-quickpay-v3";
+@import "pages/donate-confirm";
 
 // VENDOR OVERRIDES
 @import "trumps/flickity";
