--- a/src/styles/components/_donate-confirm.scss
+++ b/src/styles/components/_donate-confirm.scss
@@ -1,181 +1,186 @@
-.donate-confirm {
+.giraffe {
+
+  .donate-confirm {
 
 
-  &__receipt {
-    margin-top: 24px;
+    &__receipt {
+      margin-top: 24px;
 
-    .mo-btn {
-      color: $azure;
-      text-transform: none;
+      .mo-btn {
+        color: $azure;
+        text-transform: none;
+        @include font(roboto);
+        @include respond((
+          font-size: 16px,
+          line-height: 36px,
+        ));
+
+        &:hover {
+          color: $cerulean;
+        }
+
+        &:active {
+          color: $deep-sea-blue;
+        }
+      }
+    }
+
+    &__view-receipt {
+      display: table;
+    }
+
+    &__hide-receipt {
+      display: none;
+      margin-top: 24px;
+    }
+
+  }
+
+
+
+  .donate-receipt {
+    display: none;
+    background-color: $ice-blue;
+    max-width: 480px;
+    padding: 24px 16px;
+
+
+    &.visible {
+      display: block;
+
+      & ~ .donate-confirm__view-receipt {
+        display: none;
+      }
+
+      & ~ .donate-confirm__hide-receipt {
+        display: table;
+      }
+    }
+
+
+    &__heading {
+      color: $black;
+      opacity: .54;
+      text-transform: uppercase;
+      @include font(roboto-bold);
+      @include respond((
+        font-size: 16px,
+        line-height: 24px,
+      ));
+    }
+
+
+    &__details {
+      margin-top: 24px;
+    }
+
+
+    &__row {
+      display: flex;
+      &:not(:first-child) {
+        margin-top: 16px,
+      }
+    }
+
+
+    &__field {
+      width: percentage(164/448);
+      margin-right: 20px;
+      color: $black;
+      opacity: .54;
       @include font(roboto);
       @include respond((
         font-size: 16px,
-        line-height: 36px,
+        line-height: 24px,
       ));
-
-      &:hover {
-        color: $cerulean;
-      }
-
-      &:active {
-        color: $deep-sea-blue;
-      }
-    }
-  }
-
-  &__view-receipt {
-    display: table;
-  }
-
-  &__hide-receipt {
-    display: none;
-    margin-top: 24px;
-  }
-
-}
-
-
-
-.donate-receipt {
-  display: none;
-  background-color: $ice-blue;
-  max-width: 480px;
-  padding: 24px 16px;
-
-
-  &.visible {
-    display: block;
-
-    & ~ .donate-confirm__view-receipt {
-      display: none;
     }
 
-    & ~ .donate-confirm__hide-receipt {
-      display: table;
+
+    &__value {
+      display: flex;
+      align-items: center;
     }
-  }
 
 
-  &__heading {
-    color: $black;
-    opacity: .54;
-    text-transform: uppercase;
-    @include font(roboto-bold);
-    @include respond((
-      font-size: 16px,
-      line-height: 24px,
-    ));
-  }
-
-
-  &__details {
-    margin-top: 24px;
-  }
-
-
-  &__row {
-    display: flex;
-    &:not(:first-child) {
-      margin-top: 16px,
+    &__label {
+      @include font(roboto);
+      display: inline-flex;
+      align-items: center;
+      border-radius: 2px;
+      border: 1px solid #979797;
+      font-size: 14px;
+      line-height: 24px;
+      padding: 0 3px;
+      height: 20px;
+      margin-right: 8px;
     }
+
   }
 
 
-  &__field {
-    width: percentage(164/448);
-    margin-right: 20px;
-    color: $black;
-    opacity: .54;
-    @include font(roboto);
-    @include respond((
-      font-size: 16px,
-      line-height: 24px,
-    ));
-  }
+
+  .donate-next {
+    margin-top: 48px;
 
 
-  &__value {
-    display: flex;
-    align-items: center;
-  }
-
-
-  &__label {
-    @include font(roboto);
-    display: inline-flex;
-    align-items: center;
-    border-radius: 2px;
-    border: 1px solid #979797;
-    font-size: 14px;
-    line-height: 24px;
-    padding: 0 3px;
-    height: 20px;
-    margin-right: 8px;
-  }
-
-}
-
-
-
-.donate-next {
-  margin-top: 48px;
-
-
-  &__heading {
-    @include font(roboto-condensed-bold);
-    @include respond((
-      font-size: 24px,
-      line-height: 36px,
-    ));
-  }
-
-
-  &__subheading {
-    @include font(roboto);
-    @include respond((
-      margin-top: 24px,
-      font-size: 16px,
-      line-height: 36px,
-    ));
-  }
-
-
-  &__form {
-    margin-top: 24px;
-  }
-
-
-  .donate-form__actions {
-    display: block;
-
-    button {
-      max-width: 134px;
-      width: 45%;
-      height: 36px;
-      text-transform: uppercase;
+    &__heading {
       @include font(roboto-condensed-bold);
       @include respond((
-        display: inline-block,
-        font-size: 18px,
-        margin-top: 20px,
+        font-size: 24px,
+        line-height: 36px,
       ));
+    }
 
-      &[disabled] {
-        background-color: rgba(0, 0, 0, 0.12);
-        color: rgba(0,0,0,0.26);
+
+    &__subheading {
+      @include font(roboto);
+      @include respond((
+        margin-top: 24px,
+        font-size: 16px,
+        line-height: 36px,
+      ));
+    }
+
+
+    &__form {
+      margin-top: 24px;
+    }
+
+
+    .donate-form__actions {
+      display: block;
+
+      button {
+        max-width: 134px;
+        width: 45%;
+        height: 36px;
+        text-transform: uppercase;
+        @include font(roboto-condensed-bold);
+        @include respond((
+          display: inline-block,
+          font-size: 18px,
+          margin-top: 20px,
+        ));
+
+        &[disabled] {
+          background-color: rgba(0, 0, 0, 0.12);
+          color: rgba(0,0,0,0.26);
+        }
       }
+    }
+
+    .donate-form__action--solid:not([disabled]) {
+      @include btn--azure;
+    }
+
+    .donate-form__action--flat {
+      opacity: .26;
+    }
+
+    .donate-form__agreement {
+      max-width: 475px;
     }
   }
 
-  .donate-form__action--solid:not([disabled]) {
-    @include btn--azure;
-  }
 
-  .donate-form__action--flat {
-    opacity: .26;
-  }
-
-  .donate-form__agreement {
-    max-width: 475px;
-  }
 }
